--------------------------------------------------------------------
Data Crow version 5.0  BETA III               Released on 2024-xx-xx
--------------------------------------------------------------------

[Fixed]
- Database was not operating in logging mode - there was a fair chance information would be lost in case of a crash.

Beta fixes:
- XML Exporter will always make the paths relative when the pictures are exported for the picture list.
- Default Data: Data Crow did not show image.


--------------------------------------------------------------------
Data Crow version 5.0  BETA II                Released on 2024-10-10
--------------------------------------------------------------------

[In Progress]
The web server is being rebuild. The old web server, based on Java Server Faces (PrimeFaces), is dropped.
In its stead a new, for now, read-only Web version is being build. Over the next few beta versions you see the addition of;
- a REST web interface API
- a web application based on ReactJS 
This has been decided to future proof the Data Crow web server. The web application will be completely decoupled from the Data Crow main code through the use of the REST web api interface.
The web application could therefore also be deployed on a separate web server and is therefore no longer integrated in the Data Crow server. It will still needs the Data Crow server as this is the server that hosts the data, making it available through the REST web interface (JSON based). 
This also makes it possible, although unlikely that someone will do this, to integrate with the Data Crow server.

[Fixed]
- An issue has been fixed where Data Crow is not correctly positioning itself on the main monitor.
- The open library book search showed a file not found exception if a book cannot be found by its ISBN.
- The service information was incorrectly stored for the open library online book search. This fix only works for newly added items (after this fix).